--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "vue-template-compiler": "^2.7.8"
     },
     "dependencies": {
-        "laravel-mix": "^6.0.49"
+        "laravel-echo": "^1.13.1",
+        "laravel-mix": "^6.0.49",
+        "pusher-js": "^7.3.0"
     }
 }
